--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           { msystem: CLANG64, runner: windows-2022 },
           { msystem: MINGW64, runner: windows-2022 },
           { msystem: MINGW32, runner: windows-2022 },
-          { msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI'] }
+          #{ msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI'] }
         ]
     timeout-minutes: 4320
     name: ${{ matrix.msystem }}
